@@ -1,10 +1,8 @@
 require 'rubygems/command'
-require 'rubygems/command_aids'
 require 'rubygems/version_option'
 
 class Gem::Commands::ContentsCommand < Gem::Command
 
-  include Gem::CommandAids
   include Gem::VersionOption
 
   def initialize
