@@ -1,12 +1,10 @@
 require 'rubygems/command'
-require 'rubygems/command_aids'
 require 'rubygems/commands/query_command'
 
 module Gem
   module Commands
 
     class SearchCommand < QueryCommand
-      include CommandAids
 
       def initialize
         super(
